--- a/client/src/styles/overview/Overview.css
+++ b/client/src/styles/overview/Overview.css
@@ -1,10 +1,12 @@
 .Overview {
-    text-align: center;
-    margin: 40px
+  text-align: center;
+  margin: 2em;
 }
 
 .grid-container {
   display: grid;
+  margin-top: 2em;
+  padding-right: 1em;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -13,20 +15,27 @@
   align-items: center;
   max-height: 100px;
   height: 100%;
-  padding-left: 1em;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 .option {
-  margin: 10px;
-  max-height: 60px;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button {
-  border: 1px solid lightgrey;
-  border-radius: 5px;
+  border: 1px solid lightgray;
+  border-radius: 1.2em;
   font-weight: bold;
-  padding: 10px 50px;
+  padding: 1em 3em;
+  margin-right: 2em;
   background-color: lightgrey;
   font-size: 1em;
+}
+
+.help-text {
+  margin-right: 1em;
+  margin-left: 0.2em;
 }
